--- a/course_project_document_improved.tex
+++ b/course_project_document_improved.tex
@@ -88,6 +88,8 @@
 
 Изходът е една HTML страница, която може да се зареди директно в браузър без сървърна логика. Всички зависимости са файлови: XML, XSD, XSLT, CSS и изображения. Работният процес е лесно повторим: при добавяне на нова игра се обновява XML-ът и, ако има ново изображение, се актуализира \texttt{DOCTYPE}/XSD енума; валидирането и трансформацията се извършват отново без промени в кода.
 
+\textbf{Примерен поток (конкретно)}: входът е \texttt{catalog.xml} + \texttt{catalog.xsd} + PNG в \texttt{images/}. Стъпки: (1) \texttt{xmllint} валидира; (2) браузър прилага \texttt{catalog.xsl}; (3) генерира се HTML с таблица и контроли; (4) JS активира търсене/филтри/сортиране; (5) потребителят преглежда/филтрира списъка. Очакван резултат: осем реда, всеки със снимка, коректни жанрове и компании.
+
 \subsection{Структура на съдържанието}
 Структурата на съдържанието е описана формално в \texttt{catalog.xsd}. Моделът включва:
 \begin{itemize}[topsep=0pt]
@@ -188,6 +190,7 @@ xmllint --noout --schema catalog.xsd catalog.xml
 Проектът демонстрира как чрез XML и свързани технологии може да се реализира богат, интерактивен каталог без нужда от бекенд. Предимствата са ясната структура, автоматичната валидация, лесната поддръжка и преносимост. Основните ограничения са ръчната актуализация и зависимостта от XSLT поддръжка в браузърите.
 
 В бъдеще каталогът може да се разшири с оценки и ревюта, филтри по платформи и времеви интервали, локализация на интерфейса, генериране на PDF чрез XSL‑FO и по‑строга типизация (например отделна колекция за платформи). Други идеи включват йерархия на жанровете, интеграция с външни API за автоматично обновяване на данните и версия на мобилно приложение. Планирани разширения: поддръжка на поджанрове и PEGI/ESRB рейтинги; филтри по платформа и диапазон дати; PDF изход чрез XSL‑FO; локализация на интерфейса; по‑строга типизация на платформи чрез отделен \texttt{enum}/колекция; интеграция с външни API за автоматично обновяване на каталога.
+Практическа приложимост: подходът е подходящ за малки/средни каталози, офлайн справочници и учебни демонстрации. Поддръжка: при обновяване се следва checklist от апендикса (данни → \texttt{DOCTYPE}/XSD → \texttt{xmllint} → визуален преглед → по желание \texttt{xsltproc}). При нужда от по-мащабно решение може да се въведе бекенд или API синхронизация, но текущият файл-базиран модел остава лек и преносим.
 
 \section{Разпределение на работата}
 \label{sec:work-distribution}
