--- a/course_project_document_improved.tex
+++ b/course_project_document_improved.tex
@@ -246,16 +246,48 @@ xmllint --noout --schema catalog.xsd catalog.xml
   \begin{figure}[h]
     \centering
     \includegraphics[width=0.95\textwidth]{screenshots/overview.png}
-    \caption{Преглед на каталога с активни контроли.}
+    \caption{Преглед на каталога с активни контроли (начален изглед).}
   \end{figure}
 }{\textit{(Добавете файл screenshots/overview.png, за да се вмъкне автоматично.)}}
 
-\IfFileExists{screenshots/filter.png}{
+\IfFileExists{screenshots/midpage.png}{
   \begin{figure}[h]
     \centering
-    \includegraphics[width=0.95\textwidth]{screenshots/filter.png}
-    \caption{Филтър по жанр в действие.}
+    \includegraphics[width=0.95\textwidth]{screenshots/midpage.png}
+    \caption{Средна част на таблицата (редове 4–7).}
   \end{figure}
-}{\textit{(Добавете файл screenshots/filter.png, за да се вмъкне автоматично.)}}
+}{}
+
+\IfFileExists{screenshots/bottom.png}{
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.95\textwidth]{screenshots/bottom.png}
+    \caption{Долен край на таблицата (последен ред).}
+  \end{figure}
+}{}
+
+\IfFileExists{screenshots/filter_action_rpg.png}{
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.95\textwidth]{screenshots/filter_action_rpg.png}
+    \caption{Филтър по жанр “Action RPG”.}
+  \end{figure}
+}{}
+
+\IfFileExists{screenshots/search_mario.png}{
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.95\textwidth]{screenshots/search_mario.png}
+    \caption{Търсене по заглавие “mario”.}
+  \end{figure}
+}{}
+
+\IfFileExists{screenshots/sort_date_desc.png}{
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.95\textwidth]{screenshots/sort_date_desc.png}
+    \caption{Сортиране по дата (низходящо).}
+  \end{figure}
+}{}
 
 \end{document}
